Development
	Add --showplaylist commandline option
	Make sure media label is visible on audio only files
	Couple of playlist window resize changes
	Add commandline option --vertical, which uses a vertical layout for the video and playlist
	Fix bug where video window doesn't disappear when playing audio file after video file
	Fix bug where only first drag and dropped file got metadata
	Move thread unlock to very end of the thread.
	Get seconds in playlist to display right
	GUI Experiment, when playing audio hide the song detail and black area when the playlist is opened
	Command line option to set preferred volume, will take up to 1 second to apply on first song due to GTK idle event timeout
	Fix problem where gnome-mplayer uses more and more resources on long playlist
	Fix segfault when clicking prev or next when nothing has been played
	When using glib 2.14 or higher use more effiencient timeout method, results in lower X usage
	Move menubar out of pane
	Reenable -quiet option when running mplayer, drops gnome-mplayer cpu usage 
	If title from get_metadata is 0 bytes long, then use the file name
	Only fullscreen when doubleclick is done on the video
	Fix Playlist windows resize issues
	Fix seg fault when clearing randomized playlist
	Updated Edit->Preferences [Advanced] to have the force cache setting
	Add --forcecache command line flag, forces cache usage when playing streaming media
	Add --cache command line option, size of cache in Kbytes
	Remember window size when showing/hiding playlist
	When double clicking, only call fullscreen if video present
	Don't let the media_label get to large when playing audio streams
	Fix: controls comeback even if hidden after fullscreen being activated/deactivated
	Move some direct GTK calls out of the thread and into the main loop
	Fix problem with "Next" item in playlist
	Fix problems with window_key_callback, as found by Diogo Franco
	Updated es translation by Festor