@@ -1,4 +1,5 @@
 Development
+	Implement get_bitrate dbus method and function
 	Add --showplaylist commandline option
 	Make sure media label is visible on audio only files
 	Couple of playlist window resize changes
